se agregaron tiendas y productos

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -51,10 +51,10 @@
   </div>
 </div>
 <div class="card mx-auto border-light" style="max-width: 14rem;">
-  <img src="../../../assets/img/amplifica/amplificador.jpeg" class="card-img-top" alt="...">
+  <img src="../../../assets/img/paginicio/bateria.jpeg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-title">Guitarra Cafe</p>
-    <h5 class="card-text">Super amplficador wenardo para escuchar sus jordan 23 pa salir a roar $15.990</h5>
+    <p class="card-title">Bateria</p>
+    <h5 class="card-text">Super Bateria wenardo para escuchar sus jordan 23 pa salir a roar $15.990</h5>
     <a href="#" class="btn btn-secondary">Ver Producto</a>
   </div>
 </div>
