--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -23,10 +23,10 @@
               <mat-icon>location_on</mat-icon> TIENDAS
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">TIENDA PROVIDENCIA</a></li>
-              <li><a class="dropdown-item" href="#">TIENDA MAIPU</a></li>
-              <li><a class="dropdown-item" href="#">TIENDA SANTIAGO</a></li>
-              <li><a class="dropdown-item" href="#">TIENDA VITACURA</a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://www.google.com/maps/place/Mall+Costanera+Center/@-33.4177403,-70.6087291,17z/data=!4m12!1m6!3m5!1s0x9662cf42852fa709:0xbaef1bdfa066e82f!2sMall+Costanera+Center!8m2!3d-33.4177448!4d-70.6065351!3m4!1s0x9662cf42852fa709:0xbaef1bdfa066e82f!8m2!3d-33.4177448!4d-70.6065351">TIENDA PROVIDENCIA</a></li>
+              <li><a class="dropdown-item" target="blank" href="https://www.google.cl/maps/place/Mall+Arauco+Maipú/@-33.4815152,-70.7541645,17z/data=!3m1!4b1!4m5!3m4!1s0x9662c31831293283:0x337f64adabfcd765!8m2!3d-33.4815197!4d-70.7519705">TIENDA MAIPU</a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://www.google.com/maps/place/Mall+Vivo+Imperio/@-33.4400539,-70.6503917,17z/data=!3m1!4b1!4m5!3m4!1s0x9662c5a3d328af75:0xb7ca1510a2d9c55!8m2!3d-33.4400584!4d-70.6481977">TIENDA SANTIAGO</a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://www.google.com/maps/place/Plaza+Shopping+De+Vitacura/@-33.3878559,-70.5699684,17z/data=!3m1!4b1!4m5!3m4!1s0x9662c92c9f338519:0x94112d9bb5ecb9d5!8m2!3d-33.3878986!4d-70.5676965">TIENDA VITACURA</a></li>
             </ul>
           </li>
         </ul>
