--- a/src/app/components/productos/intcuerda/intcuerda.component.html
+++ b/src/app/components/productos/intcuerda/intcuerda.component.html
@@ -1,1 +1,158 @@
+<div class="row mx-auto text-align-center">
+    <div class="card mx-auto border-light" style="max-width: 15rem;">
+        <img src="../../../../assets/img/amplifica/Amplificador Bajo Ashdown Original.png" class="card-img-center">
+        <div class="card-body">
+          <h1 class="card-title">Ashdown</h1>
+          <p class="card-text">Amplificador Bajo Ashdown Original</p>
+          <h2>$749.990</h2>
+          <a href="#" class="btn btn-secondary">Agregar al carro</a>
+        </div>
+    </div>
+    <div class="card mx-auto border-light" style="max-width: 15rem;">
+      <img src="../../../../assets/img/amplifica/Amplificador Bajo Ashdown Studio 10.png" class="card-img-center">
+      <div class="card-body">
+        <h1 class="card-title">Ashdown</h1>
+        <p class="card-text">Amplificador Bajo Ashdown Studio 10</p>
+        <h2>$299.990</h2>
+        <a href="#" class="btn btn-secondary">Agregar al carro</a>
+      </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Amplificador Bajo Ashdown Studio 12.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ashdown</h1>
+      <p class="card-text">Amplificador Bajo Ashdown Studio 12</p>
+      <h2>$429.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
+<h1>
+  <!--espaciado-->
+</h1>
+<div class="row mx-auto text-align-center">
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Amplificador Bajo Ashdown Studio 8.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ashdown</h1>
+      <p class="card-text">Amplificador Bajo Ashdown Studio 8</p>
+      <h2>$159.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Amplificador Bajo Ashdown Studio Junior.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ashdown</h1>
+      <p class="card-text">Amplificador Bajo Ashdown Studio Junior</p>
+      <h2>$139.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Amplificador Bajo Fender Rumble.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Fender</h1>
+      <p class="card-text">Amplificador Bajo Fender Rumble</p>
+      <h2>$159.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
+<h1>
+  <!--espaciado-->
+</h1>
+<div class="row mx-auto text-align-center">
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Amplificador Guitarra Electrica Fender Champion.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Fender</h1>
+      <p class="card-text">Amplificador Guitarra Electrica Fender Champion</p>
+      <h2>$299.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Amplificador Guitarra Electrica Fender Frontman 10G.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Fender</h1>
+      <p class="card-text">Amplificador Guitarra Electrica Fender Frontman 10G</p>
+      <h2>$99.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Amplificador Guitarra Electroacustica Fender Acoustasonic 40.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Fender</h1>
+      <p class="card-text">Amplificador Guitarra Electroacustica Fender Acoustasonic 40</p>
+      <h2>$279.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
+<h1>
+  <!--espaciado-->
+</h1>
+<div class="row mx-auto text-align-center">
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Cabezal Amplificador Bajo Ashdown RM800.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ashdown</h1>
+      <p class="card-text">Cabezal Amplificador Bajo Ashdown RM800</p>
+      <h2>$799.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Cabezal Amplificador Bajo Ashdown.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ashdown</h1>
+      <p class="card-text">Cabezal Amplificador Bajo Ashdown ABM-600</p>
+      <h2>$999.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Gabinete Amplificador Bajo Ashdown ABM-410H.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ashdown</h1>
+      <p class="card-text">Gabinete Amplificador Bajo Ashdown ABM-410H</p>
+      <h2>$799.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
+<h1>
+<!--espaciado-->
+</h1>
+<div class="row mx-auto text-align-center">
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Gabinete Amplificador Bajo Ashdown.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ashdown</h1>
+      <p class="card-text">Gabinete Amplificador Bajo Ashdown RM414</p>
+      <h2>$599.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Mini Cabezal Amplificador Bajo Ashdown Original.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ashdown</h1>
+      <p class="card-text">Mini Cabezal Amplificador Bajo Ashdown Original</p>
+      <h2>$499.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Gabinete Amplificador Bajo Ashdown.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ashdown</h1>
+      <p class="card-text">Gabinete Amplificador Bajo Ashdown RM414</p>
+      <h2>$599.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
 <app-listgroup></app-listgroup>
