--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -3,7 +3,8 @@
     top: 15px;
     height: 295px;
 }
-.card{
-    top: 90px;
-    left: 65px;
+.title-vendido{
+    margin-left: 25px;
+    margin-top: 100px;
+    font: normal normal bold 20px Blacksword;
 }
