--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,13 +6,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-        <img src="../../../assets/img/paginicio/billie.PNG" class="d-block w-100" height="415px" alt="primera imagen"> 
+        <img src="../../../assets/img/paginicio/guitablack2.png" class="d-block w-100" height="415px" alt="primera imagen"> 
     </div>
     <div class="carousel-item">
         <img src="../../../assets/img/paginicio/piano.png" class="d-block w-100" height="415px" alt="primera imagen">
     </div>
     <div class="carousel-item">
-        <img src="../../../assets/img/paginicio/guitablack2.png" class="d-block w-100" height="415px" alt="primera imagen">
+        <img src="../../../assets/img/paginicio/billie.PNG" class="d-block w-100" height="415px" alt="primera imagen">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -64,8 +64,11 @@
     </div>
   </div>
 </div>
-<div class="footer">
-  <footer class="conteiner-footer">
 
-  </footer>
-</div>
+<footer class="container-footer">
+  <div class="containersus">
+    <h1>SUSCRIBETE A NUESTRO NEWSLETTER</h1>
+    <input class="form-control me-2" type="search" placeholder="¿Que Buscas?" aria-label="search">
+  </div>
+
+</footer>
