--- a/src/app/components/productos/percusion/percusion.component.html
+++ b/src/app/components/productos/percusion/percusion.component.html
@@ -1,5 +1,5 @@
-<div class="row mx-auto text-center">
-    <div class="card mx-auto border-light" style="max-width: 15rem;">
+<div class="row text-center">
+    <div class="card mx-auto border-light" style="max-width: 16rem;">
         <img src="../../../../assets/img/percusion/kit bateria tama.png" class="card-img-center">
         <div class="card-body">
           <h1 class="card-title">Tama</h1>
@@ -8,7 +8,7 @@
           <a href="#" class="btn btn-secondary">Agregar al carro</a>
         </div>
     </div>
-    <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <div class="card mx-auto border-light" style="max-width: 16rem;">
       <img src="../../../../assets/img/percusion/Batería Acústica Tama Imperialstar.png" class="card-img-center">
       <div class="card-body">
         <h1 class="card-title">Tama</h1>
@@ -17,7 +17,7 @@
         <a href="#" class="btn btn-secondary">Agregar al carro</a>
       </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/percusion/tama ccm club lam.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Tama</h1>
@@ -30,8 +30,8 @@
 <h1>
   <!--espaciado-->
 </h1>
-<div class="row mx-auto text-center">
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/percusion/Tama Starclassic ME32CZS.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Tama</h1>
@@ -40,7 +40,7 @@
       <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/percusion/Tama Imperialstar IE62H6W.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Tama</h1>
@@ -49,7 +49,7 @@
       <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/percusion/Tama SLP LSP30CS TUQ.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Tama</h1>
@@ -62,8 +62,8 @@
 <h1>
   <!--espaciado-->
 </h1>
-<div class="row mx-auto text-center">
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/percusion/SBO Club Jam color Satin blonde.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Tama</h1>
@@ -81,7 +81,7 @@
       <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/percusion/Roland VAD 506 V-Drums.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Roland</h1>
@@ -94,8 +94,8 @@
 <h1>
   <!--espaciado-->
 </h1>
-<div class="row mx-auto text-center">
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/percusion/Kit bateria electrónica Roland TD-27KV .png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Roland</h1>
@@ -104,7 +104,7 @@
       <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/percusion/Roland VAD306.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Roland</h1>
@@ -113,7 +113,7 @@
       <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/percusion/Roland TD-17KVX.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Roland</h1>
@@ -126,8 +126,8 @@
 <h1>
 <!--espaciado-->
 </h1>
-<div class="row mx-auto text-center">
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/percusion/Roland TD-07KVX.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Roland</h1>
@@ -136,7 +136,7 @@
       <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/percusion/Roland TD-17KV-L.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Roland</h1>
@@ -145,7 +145,7 @@
       <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/percusion/bateria-electronica roland.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Roland</h1>
