--- a/src/app/components/listgroup/listgroup.component.scss
+++ b/src/app/components/listgroup/listgroup.component.scss
@@ -1,22 +1,19 @@
 .list-group{
   width: 85px;
   position: absolute;
-  left: 50;
+  left: 80px;
   top: 300px;
-  font-size: 20px;
 }
 *{
   margin: 2;
-  padding: 1;
 }
 header p{
   margin-top: 11px;
-  font-size: 20px;
 }
 .field input{
   width: 100px;
   height: 25px;
-  font-size: 15px;
+  font-size: 20px;
   margin-left: 15px;
   border-radius: 15px;
   text-align: center;
@@ -26,5 +23,5 @@ header p{
   font-size: 15px;
 }
 .mb-1{
-  font-size: 14px;
+  font-size: 18px;
 }
