--- a/src/app/components/productos/intcuerda/intcuerda.component.html
+++ b/src/app/components/productos/intcuerda/intcuerda.component.html
@@ -1,5 +1,5 @@
-<div class="row mx-auto text-center">
-    <div class="card mx-auto border-light" style="max-width: 15rem;">
+<div class="row text-center">
+    <div class="card mx-auto border-light" style="max-width: 16rem;">
         <img src="../../../../assets/img/instrucuerdas/GIBSON LPSSP00DGNH1.png" class="card-img-center">
         <div class="card-body">
           <h1 class="card-title">Gibson</h1>
@@ -8,7 +8,7 @@
           <a href="#" class="btn btn-secondary">Agregar al carro</a>
         </div>
     </div>
-    <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <div class="card mx-auto border-light" style="max-width: 16rem;">
       <img src="../../../../assets/img/instrucuerdas/GIBSON SGSR4VOFCNH1.png" class="card-img-center">
       <div class="card-body">
         <h1 class="card-title">Gibson</h1>
@@ -17,7 +17,7 @@
         <a href="#" class="btn btn-secondary">Agregar al carro</a>
       </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/instrucuerdas/GIBSON SSHBHCNP8.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Gibson</h1>
@@ -30,7 +30,7 @@
 <h1>
   <!--espaciado-->
 </h1>
-<div class="row mx-auto text-center">
+<div class="row text-center">
   <div class="card mx-auto border-light" style="max-width: 14rem;">
     <img src="../../../../assets/img/instrucuerdas/GIBSON ESD18WRNH1.png" class="card-img-center">
     <div class="card-body">
@@ -40,7 +40,7 @@
       <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/instrucuerdas/GIBSON ESD18BZNH1.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Gibson</h1>
@@ -49,7 +49,7 @@
       <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 14rem;">
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
     <img src="../../../../assets/img/instrucuerdas/ESP Eclipse.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">ESP</h1>
@@ -62,8 +62,8 @@
 <h1>
   <!--espaciado-->
 </h1>
-<div class="row mx-auto text-center">
-  <div class="card mx-auto border-light" style="max-width: 14rem;">
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
     <img src="../../../../assets/img/instrucuerdas/ESP EII Horizon NTII.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">ESP</h1>
@@ -72,7 +72,7 @@
       <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 14rem;">
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
     <img src="../../../../assets/img/instrucuerdas/Esp E-II HORIZON NT-II .png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">ESP</h1>
@@ -81,7 +81,7 @@
       <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/instrucuerdas/ESP STREAM2.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">ESP</h1>
@@ -94,8 +94,8 @@
 <h1>
   <!--espaciado-->
 </h1>
-<div class="row mx-auto text-center">
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 18rem;">
     <img src="../../../../assets/img/instrucuerdas/ESP Eclipse series FM.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">ESP</h1>
@@ -126,8 +126,8 @@
 <h1>
 <!--espaciado-->
 </h1>
-<div class="row mx-auto text-center">
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/instrucuerdas/Acustica AW54CE OPN Ibanez.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Ibañez</h1>
@@ -136,7 +136,7 @@
       <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/instrucuerdas/GRX70QAL TBB Ibanez.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Ibañez</h1>
@@ -145,7 +145,7 @@
       <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
   </div>
-  <div class="card mx-auto border-light" style="max-width: 15rem;">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
     <img src="../../../../assets/img/instrucuerdas/Acustica GA3ECE AM Ibanez.png" class="card-img-center">
     <div class="card-body">
       <h1 class="card-title">Ibañez</h1>
